Completion / correction de la bibliographie pour suivre le "standard" NextMote

--- a/TimingInacc.bib
+++ b/TimingInacc.bib
@@ -1,4 +1,3 @@
-
 @INPROCEEDINGS{ContikiOS,
   AUTHOR =      {A. Dunkels and B. Gr\"onvall and T. Voigt},
   TITLE =      {{Contiki -- a Lightweight and Flexible Operating System
@@ -7,6 +6,7 @@
   SERIES =      {LCN '04},
   PAGES =       {455--462},
   YEAR =        {2004},
+  MONTH =       {November},
   PUBLISHER =   {IEEE Computer Society},
   NOTE =        {\texttt{http://www.contiki-os.org/}}
 }
@@ -19,7 +19,8 @@
   SERIES =      {LCN '06},
   PAGES =       {641--648},
   YEAR =        {2006},
-  PUBLISHER =   {IEEE Computer Society}
+  MONTH =       {November},
+  PUBLISHER =   {IEEE Computer Society},
 }
 
 @INPROCEEDINGS{MSPSim,
@@ -32,7 +33,8 @@
   SERIES =      {Simutools '09},
   PAGES =       {27:1--27:7},
   YEAR =        {2009},
-  PUBLISHER =   {ICST}
+  MONTH =       {March},
+  PUBLISHER =   {ICST},
 }
 
 @INPROCEEDINGS{Avrora,
@@ -67,21 +69,21 @@
   VOLUME =       {23},
   NUMBER =       {5},
   YEAR =         {2012},
+  MONTH =        {August},
   PAGES =        {480--493},
-  ISSN =         {2161-3915},
-  DOI =          {10.1002/ett.2558},
   PUBLISHER =    {John Wiley & Sons, Ltd}
 }
 
 @INPROCEEDINGS{TOSSIM,
   AUTHOR =       {P. Levis and N. Lee and M. Welsh and D. Culler},
-  TITLE =       {{TOSSIM: Accurate and Scalable Simulation
-                  of Entire TinyOS Applications}},
   BOOKTITLE =    {Proceedings of the 1st International Conference on
                   Embedded Networked Sensor Systems},
+  TITLE =       {{TOSSIM: Accurate and Scalable Simulation
+                  of Entire TinyOS Applications}},
   SERIES =       {SenSys '03},
   PAGES =        {126--137},
   YEAR =         {2003},
+  MONTH =        {November},
   PUBLISHER =    {ACM}
 }
 
@@ -89,29 +91,28 @@
   AUTHOR =       {P. Levis and S. Madden and J. Polastre and R. Szewczyk
                   and K. Whitehouse and A. Woo and D. Gay and J. Hill
                   and M. Welsh and E. Brewer and D. Culler},
-  TITLE =       {{TinyOS: An Operating System for Sensor Networks}},
   BOOKTITLE =    {Ambient Intelligence},
+  TITLE =       {{TinyOS: An Operating System for Sensor Networks}},
   PAGES =        {115--148},
   YEAR =         {2005},
-  PUBLISHER =    {Springer Berlin Heidelberg},
+  PUBLISHER =    {Springer},
+  ADDRESS =      {Berlin Heidelberg},
   NOTE =         {\texttt{http://www.tinyos.net/}}
 }
 
 @INPROCEEDINGS{NanoRK,
   AUTHOR =       {A. Eswaran and A. Rowe and R. Rajkumar},
-  TITLE =       {{Nano-RK: an energy-aware resource-centric RTOS
-                  for sensor networks}},
   BOOKTITLE =    {Proceedings of the 26th IEEE International
                   Real-Time Systems Symposium},
-  SERIES =       {RTSS '05},
-  PAGES =        {265},
+  TITLE =       {{Nano-RK: an energy-aware resource-centric RTOS
+                  for sensor networks}},
+  SERIES =       {RTSS'05},
+  PAGES =        {265--274},
   YEAR =         {2005},
-  DOI =          {10.1109/RTSS.2005.30},
-  ISSN =         {1052-8725},
+  MONTH =        {December},
   PUBLISHER =    {IEEE},
   NOTE =         {\texttt{http://nanork.org/}}
 }
-
 
 %% Articles "victimes" du problème de Cooja/MSPSim
 
@@ -121,9 +122,9 @@
   BOOKTITLE =   {SIES 2014}, 
   TITLE =      {{Co-RPL: RPL Routing for Mobile Low Power Wireless
                  Sensor Networks Using Corona Mechanism}}, 
+  PAGES =       {200--209},
   YEAR =        {2014},
   MONTH =       {June},
-  PAGES =       {200--209},
 }
 
 @INPROCEEDINGS{Constrain-Routing-Trees-2014,
@@ -132,9 +133,9 @@
   TITLE =      {{Improving the Energy Efficiency of WSN by Using
                  Application-Layer Topologies to Constrain RPL-Defined
                  Routing Trees}}, 
+  PAGES =       {126--133},
   YEAR =        {2014},
   MONTH =       {June},
-  PAGES =       {126--133},
 }
 
 @INPROCEEDINGS{DINAS-2014,
@@ -143,9 +144,9 @@
   BOOKTITLE =   {WCNC 2014}, 
   TITLE =      {{DINAS: A Distributed Naming Service for All-IP Wireless
                  Sensor Networks}}, 
+  PAGES =       {2781--2786},
   YEAR =        {2014},
   MONTH =       {April},
-  PAGES =       {2781--2786},
 }
 
 @ARTICLE{Efficient-Distrib-Svc-Discovery-2014,
@@ -157,7 +158,8 @@
   NUMBER =      {8},
   PAGES =       {2437--2453},
   YEAR =        {2014},
-  ISSN =        {1022-0038},
+  MONTH =       {November},
+  PUBLISHER =   {Springer},
 }
 
 @ARTICLE{IETF-Routing-WSN-2014,
@@ -169,8 +171,7 @@
   NUMBER =      {3},
   PAGES =       {1864--1877},
   YEAR =        {2014},
-  MONTH =       {Aug},
-  ISSN =        {1551-3203},
+  MONTH =       {August},
 }
 
 @ARTICLE{Key-Mgmt-2015,
@@ -181,8 +182,7 @@
   NUMBER =      {2},
   PAGES =       {371--383},
   YEAR =        {2015},
-  MONTH =       {Feb},
-  ISSN =        {1556-6013},
+  MONTH =       {February},
 }
 
 @INPROCEEDINGS{Lightweight-Multicast-Forwarding-2014,
@@ -191,9 +191,9 @@
   BOOKTITLE =   {SoftCOM 2014}, 
   TITLE =      {{Lightweight Multicast Forwarding for Service Discovery
                  in Low-Power IoT Networks}}, 
-  YEAR =        {2014},
-  MONTH =       {Sept},
   PAGES =       {133--138},
+  YEAR =        {2014},
+  MONTH =       {September},
 }
 
 @ARTICLE{Probing-Mech-wu-2015,
@@ -210,9 +210,9 @@
   BOOKTITLE =   {LATINCOM 2014}, 
   TITLE =      {{TinySDN: Enabling Multiple Controllers for Software-Defined
                  Wireless Sensor Networks}}, 
-  YEAR =        {2014},
-  MONTH =       {Nov},
   PAGES =       {1--6},
+  YEAR =        {2014},
+  MONTH =       {November},
 }
 
 @INPROCEEDINGS{Trickle-L2-2014,
@@ -221,9 +221,9 @@
   BOOKTITLE =   {WoWMoM 2014}, 
   TITLE =      {{Trickle-L\textsuperscript{2}: Lightweight Link Quality
                  Estimation through Trickle in RPL Networks}}, 
+  PAGES =       {1--9},
   YEAR =        {2014},
   MONTH =       {June},
-  PAGES =       {1--9},
 }
 
 @ARTICLE{Visual-Sensor-Networks-2014,
@@ -234,7 +234,7 @@
   VOLUME =      {23},
   PAGES =       {65--79},
   YEAR =        {2014},
-  ISSN =        {1570-8705},
+  MONTH =       {December},
 }
 
 
