Dernières modificiations dans les mots-clés et termes généraux demandés par YQS

--- a/TimingInacc.tex
+++ b/TimingInacc.tex
@@ -78,17 +78,16 @@ possible leads to fix or avoid it.
 \medskip
 
 \category{B4.4}{Performance Analysis and Design Aids}{Simulation}
-\category{B8.m}{Performance and Reliability}{Miscellaneous}
                [Inaccuracies of timings/delays in simulations]
 \category{C2.1}{Network Architecture and Design}{Wireless Communication}
                [Wireless Sensor Networks]
 \category{D4.m}{Operating Systems}{Miscellaneous}
                [WSN-dedicated OS and simulators/emulators]
 
-\terms{TODO!!}
+\terms{Simulation, Wireless Sensor Networks, WSN-dedicated OS}
 
-\keywords{Cooja, MSPSim, inaccuracies, uses, limits, reliability,
-          validation, WSN, OS}
+\keywords{Cooja / MSPSim, inaccuracies, WSN OS, simulation / emulation,
+          validation, performance evaluation}
 
 \medskip
 
@@ -824,7 +823,7 @@ more easily thanks to its emulation features.
 \section{Acknowledgements}
 \label{acks}
 
-This work has been funded by the LAR \emph{(Living Assistant Robot)} project.
+This work has been funded by the PIA LAR \emph{(Living Assistant Robot)}.
 
 \medskip
 
@@ -841,5 +840,6 @@ This work has been funded by the LAR \emph{(Living Assistant Robot)} project.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%                               80 COLONNES                                %%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 
 
