Complétion de la section de remerciements à la fin du document

--- a/TimingInacc.tex
+++ b/TimingInacc.tex
@@ -1,5 +1,6 @@
 \documentclass[10pt,emptycopyrightspace]{ewsn-proc}
 
+\usepackage[T1]{fontenc}
 \usepackage{balance}
 \usepackage{enumitem}
 
@@ -40,7 +41,6 @@
 
 
 \title{Using Cooja for WSN Simulations: Some New Uses and Limits}
-
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -823,7 +823,9 @@ more easily thanks to its emulation features.
 \section{Acknowledgements}
 \label{acks}
 
-This work has been funded by the PIA LAR \emph{(Living Assistant Robot)}.
+This work has been funded by the French national PIA
+(\textsl{\guillemotleft~Programme d'Investissement d'Avenir~\guillemotright})
+LAR \emph{(Living Assistant Robot)}.
 
 \medskip
 
@@ -836,10 +838,8 @@ This work has been funded by the PIA LAR \emph{(Living Assistant Robot)}.
 
 \end{document}
 
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%                               80 COLONNES                                %%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 
 
